Quick overflow bugfix

--- a/src/scss/base/layout.scss
+++ b/src/scss/base/layout.scss
@@ -9,6 +9,7 @@ html {
 html,
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 img {
